sandbox/output
GildedRoseTest.java:51: error: ';' expected
    public void testBackstagePassesBetween5And10() {
                                                ^
1 error
